แก้ไขปุ่ม register และ login

--- a/api/languages/en.json
+++ b/api/languages/en.json
@@ -1,6 +1,6 @@
 {
-    "Sign_in": "Sign in",
-    "Sign_up": "Sign up",
+    "Sign_in": "Login",
+    "Sign_up": "Register",
     "Home": "Home",
     "News": "News",
     "About_us": "About us",
