แก้ไข slide bar, แก้ไขรูปภาพ header admin

--- a/api/languages/en.json
+++ b/api/languages/en.json
@@ -10,5 +10,6 @@
     "blog": "blog",
     "Design&Idia": "Acoustic knowledge",
     "video": "video",
-    "Contact_us": "Contact Us"
+    "Contact_us": "Contact Us",
+    "WhatsNew":"What's New"
 }
