--- a/api/languages/th.json
+++ b/api/languages/th.json
@@ -10,5 +10,6 @@
     "blog": "บทความ",
     "Design&Idia": "ความรู้ด้านเสียง",
     "video": "วีดีโอ",
-    "Contact_us": "ติดต่อเรา"
+    "Contact_us": "ติดต่อเรา",
+    "WhatsNew":"อะไรใหม่ๆ"
 }
