--- a/api/languages/en.json
+++ b/api/languages/en.json
@@ -11,5 +11,8 @@
     "Design&Idia": "Acoustic knowledge",
     "video": "video",
     "Contact_us": "Contact Us",
-    "WhatsNew":"What's New"
+    "WhatsNew":"News",
+    "share":"Share:",
+    "product1":"Product",
+    "project1":"Project reference"
 }
