--- a/api/languages/th.json
+++ b/api/languages/th.json
@@ -11,5 +11,8 @@
     "Design&Idia": "ความรู้ด้านเสียง",
     "video": "วีดีโอ",
     "Contact_us": "ติดต่อเรา",
-    "WhatsNew":"อะไรใหม่ๆ"
+    "WhatsNew":"ข่าวสารล่าสุด",
+    "share":"แชร์:",
+    "product1":"สินค้า",
+    "project1":"โปรเจกต์ที่ผ่านมา"
 }
