--- a/api/languages/th.json
+++ b/api/languages/th.json
@@ -6,13 +6,13 @@
     "About_us": "เกี่ยวกับเรา",
     "Service_t": "บริการ",
     "product": "สินค้า",
-    "project": "ผลงาน",
+    "project": "โครงการ",
     "blog": "บทความ",
     "Design&Idia": "ความรู้ด้านเสียง",
-    "video": "วีดีโอ",
+    "video": "วิดีโอ",
     "Contact_us": "ติดต่อเรา",
     "WhatsNew":"ข่าวสารล่าสุด",
     "share":"แชร์:",
-    "product1":"สินค้า",
-    "project1":"โปรเจกต์ที่ผ่านมา"
+    "product1":"สินค้า แทรนดาร์",
+    "project1":"โครงการที่ผ่านมา"
 }
