--- a/api/languages/en.json
+++ b/api/languages/en.json
@@ -14,5 +14,6 @@
     "WhatsNew":"News",
     "share":"Share:",
     "product1":"Product Trandar",
-    "project1":"Project Reference"
+    "project1":"Project Reference",
+    "Learnmore":"Learn more >"
 }
