--- a/api/languages/th.json
+++ b/api/languages/th.json
@@ -14,5 +14,6 @@
     "WhatsNew":"ข่าวสารล่าสุด",
     "share":"แชร์:",
     "product1":"สินค้า แทรนดาร์",
-    "project1":"โครงการที่ผ่านมา"
+    "project1":"โครงการที่ผ่านมา",
+    "Learnmore":"เรียนรู้เพิ่มเติม >"
 }
