เพิ่มการชำระเงินและ Breadcrumb

--- a/newstore/locales/en.json
+++ b/newstore/locales/en.json
@@ -1,25 +1,9 @@
 {
   "th": "Thai",
   "en": "English",
-  "profile": "Profile",
-  "profile_info": "Profile info",
-  "firstname": "First name",
-  "lastname": "Last name",
-  "nickname": "Nickname",
-  "birthday": "Birthday",
-  "address": "Address",
-  "address_info": "Address Info",
-  "province": "Province",
-  "district": "District",
-  "subdistrict": "Subdistrict",
-  "address_details": "House number, street, alley",
-  "postcode": "Postcode",
-  "back": "Back",
-  "next": "Next",
-  "confirm": "Confirm",
-  "confirm_details": "Confirm Details",
-  "review_confirm": "Review your information and submit",
-  "agreeDisclosure": "Consent to disclose personal information to KNTX",
-  "confirmTruth": "I certify that the information provided is true.",
-  "submit": "Submit"
+  "้home": "Home",
+  "product": "Product",
+  "detail": "Detail",
+  "list": "List",
+  "user": "User"
 }
