--- a/newstore/locales/th.json
+++ b/newstore/locales/th.json
@@ -5,5 +5,6 @@
   "product": "สินค้า",
   "detail": "รายละเอียด",
   "list": "รายการ",
-  "user": "บัญชีผู้ใช้"
+  "user": "บัญชีผู้ใช้",
+  "payment": "การชำระเงิน"
 }
