เพิ่มส่วน ภาษาจีนทั้งหมด

--- a/api/languages/nation.json
+++ b/api/languages/nation.json
@@ -9,6 +9,11 @@
             "name": "English",
             "abbreviation": "EN",
             "flag": "https://flagcdn.com/w320/gb.png"
+        },
+        {
+            "name": "Chinese",
+            "abbreviation": "CN",
+            "flag": "https://flagcdn.com/w320/cn.png"
         }
     ]
 }
