--- a/api/languages/nation.json
+++ b/api/languages/nation.json
@@ -14,6 +14,11 @@
             "name": "Chinese",
             "abbreviation": "CN",
             "flag": "https://flagcdn.com/w320/cn.png"
+        },
+        {
+            "name": "Japanese",
+            "abbreviation": "JP",
+            "flag": "https://flagcdn.com/w320/jp.png"
         }
     ]
 }
