ปรับการ หน้าโชว์สินค้า

--- a/store/locales/en.json
+++ b/store/locales/en.json
@@ -1,10 +1,12 @@
 {
   "th": "Thai",
   "en": "English",
-  "้home": "Home",
+  "store": "Home",
   "product": "Product",
   "detail": "Detail",
   "list": "List",
   "user": "User",
-  "payment": "Payment"
+  "payment": "Payment",
+  "admin": "Admin",
+  "control_menu": "Menu management"
 }
