--- a/store/locales/th.json
+++ b/store/locales/th.json
@@ -1,10 +1,12 @@
 {
   "th": "ไทย",
   "en": "อังกฤษ",
-  "home": "หน้าแรก",
+  "store": "หน้าแรก",
   "product": "สินค้า",
   "detail": "รายละเอียด",
   "list": "รายการ",
   "user": "บัญชีผู้ใช้",
-  "payment": "การชำระเงิน"
+  "payment": "การชำระเงิน",
+  "admin": "แอดมิน",
+  "control_menu": "การจัดการเมนู"
 }
