เพิ่มการติดตั้งเมนู header

--- a/store/locales/th.json
+++ b/store/locales/th.json
@@ -8,6 +8,6 @@
   "user": "บัญชีผู้ใช้",
   "payment": "การชำระเงิน",
   "admin": "แอดมิน",
-  "control_menu": "การจัดการเมนู",
-  "add_menu": "เพิ่มเมนู"
+  "control": "การจัดการ",
+  "setup_link": "ติดตั้งเมนู"
 }
