--- a/store/locales/en.json
+++ b/store/locales/en.json
@@ -8,6 +8,6 @@
   "user": "User",
   "payment": "Payment",
   "admin": "Admin",
-  "control_menu": "Menu management",
-  "add_menu": "Add Menu"
+  "control": "Management",
+  "setup_link": "Setup Menu"
 }
