--- a/store/locales/th.json
+++ b/store/locales/th.json
@@ -9,5 +9,10 @@
   "payment": "การชำระเงิน",
   "admin": "แอดมิน",
   "control": "การจัดการ",
-  "setup_link": "ติดตั้งเมนู"
+  "actions": "การดำเนินการ",
+  "setup_link": "ติดตั้งเมนู",
+  "list_link": "รายการเมนู",
+  "link_name": "ชื่อเมนู",
+  "link_url": "เส้นนำทางเมนู",
+  "link_icon": "ไอคอนเมนู"
 }
