--- a/store/locales/en.json
+++ b/store/locales/en.json
@@ -9,5 +9,10 @@
   "payment": "Payment",
   "admin": "Admin",
   "control": "Management",
-  "setup_link": "Setup Menu"
+  "actions": "Actions",
+  "setup_link": "Setup Menu",
+  "list_link": "List menu",
+  "link_name": "Menu name",
+  "link_url": "Menu path",
+  "link_icon": "Menu icon"
 }
