ปรับ หน้า cart and checkout

--- a/store/locales/en.json
+++ b/store/locales/en.json
@@ -6,7 +6,8 @@
   "detail": "Detail",
   "list": "List",
   "user": "User",
-  "payment": "Payment",
+  "cart": "Cart",
+  "checkout": "Checkout",
   "admin": "Admin",
   "control": "Management",
   "actions": "Actions",
