--- a/store/locales/th.json
+++ b/store/locales/th.json
@@ -6,7 +6,8 @@
   "detail": "รายละเอียด",
   "list": "รายการ",
   "user": "บัญชีผู้ใช้",
-  "payment": "การชำระเงิน",
+  "cart": "ตะกร้าสินค้า",
+  "checkout": "การชำระเงิน",
   "admin": "แอดมิน",
   "control": "การจัดการ",
   "actions": "การดำเนินการ",
