ปรับการสั่งซื้อ

--- a/store/locales/th.json
+++ b/store/locales/th.json
@@ -8,6 +8,7 @@
   "user": "บัญชีผู้ใช้",
   "cart": "ตะกร้าสินค้า",
   "checkout": "การชำระเงิน",
+  "place_order": "คำสั่งซื้อสินค้า",
   "admin": "แอดมิน",
   "control": "การจัดการ",
   "actions": "การดำเนินการ",
