--- a/store/locales/en.json
+++ b/store/locales/en.json
@@ -8,6 +8,7 @@
   "user": "User",
   "cart": "Cart",
   "checkout": "Checkout",
+  "place_order": "Orders",
   "admin": "Admin",
   "control": "Management",
   "actions": "Actions",
