--- a/store/locales/th.json
+++ b/store/locales/th.json
@@ -7,7 +7,7 @@
   "list": "รายการ",
   "user": "บัญชีผู้ใช้",
   "cart": "ตะกร้าสินค้า",
-  "checkout": "การชำระเงิน",
+  "checkout": "ตรวจสอบ",
   "place_order": "คำสั่งซื้อสินค้า",
   "admin": "แอดมิน",
   "control": "การจัดการ",
